--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 </head>
 <body>
   <div class="container">
-    <img src="file:///D:/STICKERS/5.png" alt="Profile Picture" class="profile-img" />
+    <img src="5.png" alt="Profile Picture" class="profile-img" />
     <h1>WPS IS OURS</h1>
     <p class="bio">Welcome to my links! 👋</p>
 
@@ -92,7 +92,7 @@
 
     <div class="qr-section">
       <h2>Scan to Visit</h2>
-      <img src="file:///D:/Downloads/Untitled%20design.png" alt="QR Code">
+      <img src="wpsakinka.png" alt="QR Code">
       <p>Share this page with others by scanning the code!</p>
     </div>
   </div>
