--- a/index.html
+++ b/index.html
@@ -61,17 +61,6 @@
       transform: scale(1.02);
     }
 
-    .qr-section {
-      margin-top: 40px;
-      text-align: center;
-    }
-
-    .qr-section img {
-      width: 160px;
-      height: 160px;
-      margin-bottom: 10px;
-    }
-
     footer {
       margin-top: 20px;
       color: #aaa;
@@ -85,18 +74,9 @@
     <h1>WPS IS OURS</h1>
     <p class="bio">Welcome to my links! 👋</p>
 
-    <a class="link" href="https://facebook.com" target="_blank">🌐 Facebook</a>
-    <a class="link" href="https://instagram.com" target="_blank">🌐 Instagram</a>
+    <a class="link" href="https://www.facebook.com/CMOGPNofficial/" target="_blank">🌐 Facebook</a>
     <a class="link" href="https://youtu.be/-Fta2t2yt_E?si=I25bsPGcx4f1px2E" target="_blank">🎥 YouTube</a>
-    <a class="link" href="mailto:you@example.com">📧 Email Me</a>
-
-    <div class="qr-section">
-      <h2>Scan to Visit</h2>
-      <img src="wpsakinka.png" alt="QR Code">
-      <p>Share this page with others by scanning the code!</p>
-    </div>
-  </div>
-
+ 
   <footer>
     &copy; 2025 Your Name
   </footer>
