--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Your Linktree</title>
+  <title>WPS Akin Ka</title>
   <style>
     body {
       margin: 0;
@@ -72,13 +72,14 @@
   <div class="container">
     <img src="5.png" alt="Profile Picture" class="profile-img" />
     <h1>WPS IS OURS</h1>
-    <p class="bio">Welcome to my links! 👋</p>
+    <p class="bio">Our Seas. Our Rights. Our Future. 👋</p>
 
-    <a class="link" href="https://www.facebook.com/CMOGPNofficial/" target="_blank">🌐 Facebook</a>
+    <a class="link" href="https://www.facebook.com/CMOGPNofficial/" target="_blank">🌐 CMOG-PN</a>
+    <a class="link" href="https://www.facebook.com/DipMan00/" target="_blank">🌐 Diplomatikong Mandaragat</a>
     <a class="link" href="https://youtu.be/-Fta2t2yt_E?si=I25bsPGcx4f1px2E" target="_blank">🎥 YouTube</a>
  
   <footer>
-    &copy; 2025 Your Name
+    &copy; 2025 Filipinos Stand United
   </footer>
 </body>
 </html>
