--- a/index.html
+++ b/index.html
@@ -74,7 +74,8 @@
     <h1>WPS IS OURS</h1>
     <p class="bio">Our Seas. Our Rights. Our Future. 👋</p>
 
-    <a class="link" href="https://www.facebook.com/CMOGPNofficial/" target="_blank">🌐 CMOG-PN</a>
+    <a class="link" href="https://www.facebook.com/CMOGPNofficial/" target="_blank">
+      <img src="cmog.svg" width="20" height="20" style="margin-right:10px;" alt="Facebook icon" /> CMOG-PN</a>
     <a class="link" href="https://www.facebook.com/DipMan00/" target="_blank">🌐 Diplomatikong Mandaragat</a>
     <a class="link" href="https://youtu.be/-Fta2t2yt_E?si=I25bsPGcx4f1px2E" target="_blank">🎥 YouTube</a>
  
