--- a/index.html
+++ b/index.html
@@ -77,8 +77,7 @@
     <a class="link" href="https://www.facebook.com/CMOGPNofficial/" target="_blank">
       <img src="cmog.svg" width="40" height="40" style="margin-right:5px;" alt="Facebook icon" /> Civil Military Operations Group-Phlippine Navy</a>
     <a class="link" href="https://www.facebook.com/DipMan00/" target="_blank">🌐 Diplomatikong Mandaragat</a>
-    <a class="link" href="https://youtu.be/-Fta2t2yt_E?si=I25bsPGcx4f1px2E" target="_blank">
-      <i class="fas fa-youtube"></i>i>🎥 YouTube</a>
+    <a class="link" href="https://youtu.be/-Fta2t2yt_E?si=I25bsPGcx4f1px2E" target="_blank"> <i class="fab fa-youtube"></i> WPS Akin Ka Music Video</a>
  
   <footer>
     &copy; 2025 Filipinos Stand United
