--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       margin: 0;
       padding: 0;
       font-family: 'Segoe UI', sans-serif;
-      background: #f2f2f2;
+      background-image: url('
       display: flex;
       flex-direction: column;
       align-items: center;
@@ -75,9 +75,10 @@
     <p class="bio">Our Seas. Our Rights. Our Future. 👋</p>
 
     <a class="link" href="https://www.facebook.com/CMOGPNofficial/" target="_blank">
-      <img src="cmog.svg" width="40" height="40" style="margin-right:5px;" alt="Facebook icon" /> Civil Military Operations Group-Phlippine Navy</a>
+      <img src="cmog.svg" width="15" height="15" style="margin-right:15px;" alt="Facebook icon" /> Civil Military Operations Group-Phlippine Navy</a>
     <a class="link" href="https://www.facebook.com/DipMan00/" target="_blank">🌐 Diplomatikong Mandaragat</a>
-    <a class="link" href="https://youtu.be/-Fta2t2yt_E?si=I25bsPGcx4f1px2E" target="_blank"> <i class="fab fa-youtube"></i> WPS Akin Ka Music Video</a>
+    <a class="link" href="https://youtu.be/-Fta2t2yt_E?si=I25bsPGcx4f1px2E" target="_blank">
+      <i class="fab fa-youtube"></i> WPS Akin Ka Music Video</a>
  
   <footer>
     &copy; 2025 Filipinos Stand United
