--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       margin: 0;
       padding: 0;
       font-family: 'Segoe UI', sans-serif;
-      background-image: url('
+      background: #f2f2f2;
       display: flex;
       flex-direction: column;
       align-items: center;
