--- a/index.html
+++ b/index.html
@@ -18,15 +18,15 @@
 
     .container {
       margin-top: 50px;
-      width: 80%;
-      max-width: 600px;
+      width: 50%;
+      max-width: 500px;
       text-align: center;
     }
 
     .profile-img {
-      width: 120px;
-      height: 120px;
-      border-radius: 30%;
+      width: 100px;
+      height: 100px;
+      border-radius: 20%;
       object-fit: cover;
       margin-bottom: 20px;
       border: 3px solid #333;
@@ -70,7 +70,7 @@
 </head>
 <body>
   <div class="container">
-    <img src="5.png" alt="Profile Picture" class="profile-img" />
+    <img src="xa5me3rt.png" alt="Profile Picture" class="profile-img" />
     <h1>WPS IS OURS</h1>
     <p class="bio">Our Seas. Our Rights. Our Future. 👋</p>
 
