--- a/index.html
+++ b/index.html
@@ -17,18 +17,18 @@
     }
 
     .container {
-      margin-top: 50px;
-      width: 50%;
+      margin-top: 40px;
+      width: 90%;
       max-width: 500px;
       text-align: center;
     }
 
     .profile-img {
-      width: 100px;
-      height: 100px;
-      border-radius: 20%;
+      width: 120px;
+      height: 120px;
+      border-radius: 50%;
       object-fit: cover;
-      margin-bottom: 20px;
+      margin-bottom: 15px;
       border: 3px solid #333;
     }
 
@@ -44,7 +44,9 @@
     }
 
     .link {
-      display: block;
+      display: flex;
+      align-items: center;
+      justify-content: center;
       background: #fff;
       padding: 15px 20px;
       margin: 10px 0;
@@ -56,6 +58,10 @@
       transition: all 0.2s ease;
     }
 
+    .link i {
+      margin-right: 10px
+    }
+    
     .link:hover {
       background: #eaeaea;
       transform: scale(1.02);
