--- a/index.html
+++ b/index.html
@@ -85,9 +85,10 @@
 
     <a class="link" href="https://www.facebook.com/CMOGPNofficial/" target="_blank">
       <img src="cmog.svg" width="20" height="20" style="margin-right:10px;" alt="Facebook icon" /> Civil Military Operations Group-Phlippine Navy</a>
-    <a class="link" href="https://www.facebook.com/DipMan00/" target="_blank">🌐 Diplomatikong Mandaragat</a>
+    <a class="link" href="https://www.facebook.com/DipMan00/" target="_blank">
+      <i class="fab fa-facebook"></i>Diplomatikong Mandaragat</a>
     <a class="link" href="https://youtu.be/-Fta2t2yt_E?si=I25bsPGcx4f1px2E" target="_blank">
-      <i class="fas fa-youtube"></i> WPS Akin Ka Music Video</a>
+      <i class="fab fa-youtube"></i> WPS Akin Ka Music Video</a>
  
   <footer>
     &copy; 2025 Filipinos Stand United
