--- a/index.html
+++ b/index.html
@@ -70,6 +70,11 @@
       transform: scale(1.02);
     }
 
+    iframe {
+      border-radius: 12px;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.3);
+    }
+
     footer {
       margin-top: 20px;
       color: #aaa;
@@ -89,6 +94,13 @@
       <i class="fab fa-facebook"></i> Diplomatikong Mandaragat </a>
     <a class="link" href="https://youtu.be/-Fta2t2yt_E?si=I25bsPGcx4f1px2E" target="_blank">
       <i class="fab fa-youtube"></i> WPS Akin Ka Music Video </a>
+
+    <div class="survey-section">
+      <h2>Feedback Survey</h2>
+      <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdFRKmzL_a0adTrYDP4PM2lKBI32PWKXM-kALLPKIWQN6316g/viewform?usp=preview" 
+              width="100%" height="600" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+    </div>
+  </div>
  
   <footer>
     &copy; 2025 Filipinos Stand United
