--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
     <a class="link" href="https://youtu.be/-Fta2t2yt_E?si=I25bsPGcx4f1px2E" target="_blank">
       <i class="fab fa-youtube"></i> WPS Akin Ka Music Video </a>
      <a class="link" href="https://docs.google.com/forms/d/e/1FAIpQLSdFRKmzL_a0adTrYDP4PM2lKBI32PWKXM-kALLPKIWQN6316g/viewform?usp=preview">
-      <i class="fab fa-google"></i> WPS Survey </a>
+      <i class="fab fa-gmail"></i> WPS Survey </a>
 
     <div class="survey-section">
       <h2>Feedback Survey</h2>
