--- a/index.html
+++ b/index.html
@@ -98,11 +98,11 @@
       <i class="fab fa-mail"></i> WPS Survey </a>
 
     <!--div class="survey-section"-->
-     /* <h2>Feedback Survey</h2>
-      <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdFRKmzL_a0adTrYDP4PM2lKBI32PWKXM-kALLPKIWQN6316g/viewform?usp=preview" 
-              width="100%" height="600" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
-    </div>
-  </div> */
+      <!--<h2>Feedback Survey</h2>-->
+      <!--iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdFRKmzL_a0adTrYDP4PM2lKBI32PWKXM-kALLPKIWQN6316g/viewform?usp=preview"--> 
+              <!--width="100%" height="600" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>-->
+    <!--</div-->
+  <!--</div--> 
  
   <footer>
     &copy; 2025 Filipinos Stand United
