--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
   <div class="container">
     <img src="xa5me3rt.png" alt="Profile Picture" class="profile-img" />
     <h1>WPS IS OURS</h1>
-    <p class="bio">Our Seas. Our Rights. Our Future. 👌</p>
+    <p class="bio">🇵🇭 Our Seas. Our Rights. Our Future. 🇵🇭</p>
 
     <a class="link" href="https://www.facebook.com/CMOGPNofficial/" target="_blank">
       <img src="cmog.svg" width="20" height="20" style="margin-right:10px;" alt="Facebook icon" /> Civil Military Operations Group - Philippine Navy</a>
