--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       margin: 0;
       padding: 0;
       font-family: 'Segoe UI', sans-serif;
-      background: #f2f2f2;
+      background: #90E0EF;
       display: flex;
       flex-direction: column;
       align-items: center;
