--- a/index.html
+++ b/index.html
@@ -81,6 +81,28 @@
       font-size: 14px;
     }
   </style>
+
+  <!-- Google Analytics (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-SQJMYBDKX1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-SQJMYBDKX1');
+</script>
+   <!-- Auto Link Click Tracking -->
+<script>
+  document.addEventListener("DOMContentLoaded", () => {
+    document.querySelectorAll("a").forEach(link => {
+      gtag('event', 'click', {
+        event_category: 'link',
+        event_label: link.href'
+      });
+    });
+  });
+  });
+</script>
 </head>
 <body>
   <div class="container">
