--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
       <i class="fab fa-facebook"></i> Naval Warrior Diplomat </a>
      <a class="link" href="https://https://web.facebook.com/DipMan00/" target="_blank">
       <i class="fab fa-facebook"></i> Diplomatikong Mandaragat </a>
-    <a class="link" href="https://https:/https://web.facebook.com/profile.php?id=61578990516807/" target="_blank">
+    <a class="link" href="https://https://web.facebook.com/profile.php?id=61578990516807/" target="_blank">
       <i class="fab fa-facebook"></i> PN Solidarity Merchandise for WPS </a>
     <a class="link" href="https://web.facebook.com/CMOGPNofficial/videos/wps-akin-ka/347844698338063/?_rdc=1&_rdr#/" target="_blank">
       <i class="fab fa-facebook"></i> WPS Akin Ka (Music Video) - Facebook </a>
