--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
     <h1>WPS IS OURS</h1>
     <p class="bio">🇵🇭 Our Seas. Our Rights. Our Future. 🇵🇭</p>
 
-    <a class="link" href="https://http://web.facebook.com/PhilippineNavy/" target="_blank">
+    <a class="link" href="https://web.facebook.com/PhilippineNavy/" target="_blank">
         <i class="fab fa-facebook"></i> Philippine Navy </a>
     <a class="link" href="https://www.facebook.com/CMOGPNofficial/" target="_blank">
       <img src="cmog.svg" width="20" height="20" style="margin-right:10px;" alt="Facebook icon" /> Civil Military Operations Group - Philippine Navy</a>
