--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
     <p class="bio">🇵🇭 Our Seas. Our Rights. Our Future. 🇵🇭</p>
 
     <a class="link" href="https://web.facebook.com/PhilippineNavy/" target="_blank">
-        <i class="fab fa-facebook"></i> Philippine Navy </a>
+        <i class="fab fa-facebook"></i> Philippine Navy Official Page </a>
     <a class="link" href="https://www.facebook.com/CMOGPNofficial/" target="_blank">
       <img src="cmog.svg" width="20" height="20" style="margin-right:10px;" alt="Facebook icon" /> Civil Military Operations Group - Philippine Navy</a>
      <a class="link" href="https://www.facebook.com/yourNWD/" target="_blank">
