--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 
     <div class="survey-section">
       <h2>Feedback Survey</h2>
-      <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdFRKmzL_a0adTrYDP4PM2lKBI32PWKXM-kALLPKIWQN6316g/viewform?usp=preview">
+      <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdFRKmzL_a0adTrYDP4PM2lKBI32PWKXM-kALLPKIWQN6316g/viewform?usp=preview"
               width="100%" height="600" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
     </div>
   </div>
