--- a/index.html
+++ b/index.html
@@ -115,10 +115,10 @@
       <img src="cmog.svg" width="20" height="20" style="margin-right:10px;" alt="Facebook icon" /> Civil Military Operations Group - Philippine Navy</a>
      <a class="link" href="https://www.facebook.com/yourNWD/" target="_blank">
       <i class="fab fa-facebook"></i> Naval Warrior Diplomat </a>
-    <!a class="link" href="https://web.facebook.com/CMOGPNofficial/videos/wps-akin-ka/347844698338063/?_rdc=1&_rdr#/" target="_blank">
-      <!i class="fab fa-facebook"></i> WPS Akin Ka (Music Video) - Facebook </a>
-    <!a class="link" href="https://youtu.be/-Fta2t2yt_E?si=I25bsPGcx4f1px2E" target="_blank">
-      <!i class="fab fa-youtube"></i> WPS Akin Ka (Music Video) - Youtube </a>
+  <!--   <a class="link" href="https://web.facebook.com/CMOGPNofficial/videos/wps-akin-ka/347844698338063/?_rdc=1&_rdr#/" target="_blank">
+       <!--<i class="fab fa-facebook"></i> WPS Akin Ka (Music Video) - Facebook </a>
+    <!-- <a class="link" href="https://youtu.be/-Fta2t2yt_E?si=I25bsPGcx4f1px2E" target="_blank">
+      <!-- <i class="fab fa-youtube"></i> WPS Akin Ka (Music Video) - Youtube </a>
     
 
     <div class="survey-section">
